# cate

./: .gitignore  Cargo.toml  Dockerfile  README.md
assets/: links.txt
file-for-upload/: newMain.cpp  temp.txt
src/: main.rs  receiver.rs
src/client/: Dockerfile  client.css  main.rs  sender.rs
src/client/pages/: file.rs  home.rs  mod.rs  setting.rs
src/server/: main.rs  receiver.rs
ui/: app-window.slint
