#run client -> cargo run --features client-binary --bin client
#run server -> cargo run --features server-binary --bin server
[package]
name = "cate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
required-features = ["client-binary"]

[features]
server-binary = []
client-binary = ["gtk"]

[dependencies]
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_12"], optional = true }
