#run client -> cargo run --features client-binary --bin client
#run server -> cargo run --features server-binary --bin server
[package]
name = "cate"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server/main.rs"
required-features = ["server-binary"]

[[bin]]
name = "client"
path = "src/client/main.rs"
required-features = ["client-binary"]

[features]
server-binary = ["nix"]
client-binary = ["gtk", "lazy_static"]

[dependencies]
gtk = { version = "0.9.2", package = "gtk4", features = ["v4_12"], optional = true }
nix = { version = "0.29.0", features = ["user"], optional = true }
lazy_static = { version = "1.5.0", optional = true }
